# digital-land-python

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  TESTING.md  conftest.py  docker-compose.yml  docker_entrypoint.sh  lpa_geometry_processor.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup_venv.sh  test_polars_phases.py  version.py
.github/workflows/: codeql-analysis.yml  continuous-integration.yml  deploy-documentation.yml  docker-push.yml  publish.yml  test.yml  validate-documentation.yml
digital_land/: __init__.py  __main__.py  api.py  check.py  cli.py  collect.py  collection.py  command_arguments.py  commands.py  convert.py  dataset.py  entity.py  entity_lookup.py  entry_loader.py  fetch.py  filter.py  generate.py  harmonise.py  hookspecs.py  index.py  issues.py  load.py  log.py  lookup.py  makerules.py  map.py  normalise.py  organisation.py  pipeline.py  pipeline_resource.py  platform.py  plugin.py  profile.py  register.py  resource_organisation.py  save.py  schema.py  slug.py  specification.py  state.py  (+5 more)
digital_land/adapter/: file.py
docs/: conf.py  digital_land.adapter.rst  digital_land.datatype.rst  digital_land.expectations.checkpoints.rst  digital_land.expectations.rst  digital_land.package.rst  digital_land.phase.rst  digital_land.plugins.rst  digital_land.rst  digital_land.store.rst  digital_land.utils.rst  index.rst  modules.rst
local_testing/: Makefile  README.md  cli.py  file_downloader.py  gml_converter.py  gml_extractor.py  main.py  pipeline_config.py  pipeline_report.py  pipeline_runner.py  run_all.py
makerules/: makerules.mk  python.mk
notebooks/: debug_collector_error.ipynb  debug_resource_transformation.ipynb  debug_value_normalisation.ipynb
tests/: README.md  conftest.py  test_convert.py  test_enum.py  test_integer.py  test_map.py  test_normalise.py  test_organisation.py  test_point.py  test_string.py  test_uri.py
(+615 files in other folders)
